# VARPP

./: .gitattributes  .gitignore  AUTHORS  Makefile.am  README  README.md  autogen.sh  configure.ac
data/: disease_variants.txt  genes_for_annotation.txt  out.seed_gene_list  patient_variants.txt
dev/: Makefile.am  check_for_R_libs.sh  check_for_programs.sh
scripts/: VARPP.R  loadData.R  performanceStats.R  processDBNSFP.R  runVAARP.sh
